--- a/dash/assets/style.css
+++ b/dash/assets/style.css
@@ -14,6 +14,14 @@ iframe {
     margin-top: 2vh
 }
 
+#tabs-comparison-parent{
+    width: 100%
+}
+
+.tab-content--vert{
+    width:100%
+}
+
 .center{
     display: flex;
     justify-content: center;
